belajar tailwind-section my recent work 1

--- a/index.html
+++ b/index.html
@@ -155,7 +155,24 @@
         </div>
       </div>
     </section>
-    <section class="w-screen mx-auto py-4 bg-gray-300 h-32">Recent Work</section>
+
+    <!-- recent work -->
+    <section class="container mx-auto py-8 bg-white">
+      <div class="text-center mb-8">
+        <h1 class="mb-3 w-full my-2 text-5xl font-bold text-gray-700">My Recent Work</h1>
+        <div class="mb-4">
+          <div class="h-1 mx-auto bg-pink-500 w-2/3 md:w-1/4 opacity-75 my-0 py-0 rounded"></div>
+        </div>
+        <p class="text-lg m-4 text-gray-600">Berikut adalah pekerjaan terbaru Saya :</p>
+      </div>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 m-8">
+        <div class="bg-blue-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
+        <div class="bg-pink-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
+        <div class="bg-green-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
+        <div class="bg-yellow-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
+      </div>
+    </section>
     <section class="w-screen mx-auto py-4 bg-indigo-700 h-32">Contact Me</section>
     <section class="w-screen mx-auto py-4 bg-white h-32">Footer</section>
 
