--- a/index.html
+++ b/index.html
@@ -167,10 +167,46 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 m-8">
-        <div class="bg-blue-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
-        <div class="bg-pink-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
-        <div class="bg-green-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
-        <div class="bg-yellow-500 px-4 py-4 m-2 shadow-lg rounded h-32"></div>
+        <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
+          <img src="images/img1.jpg" alt="" class="w-full rounded-lg" />
+          <div class="px-2 py-2 text-center">
+            <p class="font-bold text-xl mb-2 text-gray-700">Sistem Informasi Penelitian</p>
+            <p class="text-gray-700 text-base">Sistem Informasi Penelitian untuk dosen dan mahasiswa di universitas sesukakami</p>
+            <div class="px-2 py-4 text-center">
+              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tr-lg rounded-bl-lg">Detail</button>
+            </div>
+          </div>
+        </div>
+        <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
+          <img src="images/img2.jpg" alt="" class="w-full rounded-lg" />
+          <div class="px-2 py-2 text-center">
+            <p class="font-bold text-xl mb-2 text-gray-700">Sistem Perpustakaan</p>
+            <p class="text-gray-700 text-base">Sistem Informasi Penelitian untuk dosen dan mahasiswa di universitas sesukakami</p>
+            <div class="px-2 py-4 text-center">
+              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tr-lg rounded-bl-lg">Detail</button>
+            </div>
+          </div>
+        </div>
+        <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
+          <img src="images/img3.jpg" alt="" class="w-full rounded-lg" />
+          <div class="px-2 py-2 text-center">
+            <p class="font-bold text-xl mb-2 text-gray-700">Anomali Kehidupan</p>
+            <p class="text-gray-700 text-base">Sistem Informasi Penelitian untuk dosen dan mahasiswa di universitas sesukakami</p>
+            <div class="px-2 py-4 text-center">
+              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tr-lg rounded-bl-lg">Detail</button>
+            </div>
+          </div>
+        </div>
+        <div class="bg-white px-4 py-4 m-2 shadow-lg rounded">
+          <img src="images/img4.jpg" alt="" class="w-full rounded-lg" />
+          <div class="px-2 py-2 text-center">
+            <p class="font-bold text-xl mb-2 text-gray-700">Hacking</p>
+            <p class="text-gray-700 text-base">Sistem Informasi Penelitian untuk dosen dan mahasiswa di universitas sesukakami</p>
+            <div class="px-2 py-4 text-center">
+              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tr-lg rounded-bl-lg">Detail</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="w-screen mx-auto py-4 bg-indigo-700 h-32">Contact Me</section>
