belajar tailwind-section contact me

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       .gradient-skill {
         background-image: linear-gradient(#4c51bf, #702459);
       }
+      .gradient-bottom {
+        background-image: linear-gradient(#4c51bf, #702459);
+      }
     </style>
   </head>
   <body>
@@ -209,8 +212,53 @@
         </div>
       </div>
     </section>
-    <section class="w-screen mx-auto py-4 bg-indigo-700 h-32">Contact Me</section>
-    <section class="w-screen mx-auto py-4 bg-white h-32">Footer</section>
+
+    <!-- contact me -->
+    <section class="w-screen mx-auto py-4 gradient-bottom">
+      <h1 class="w-full my-2 text-5xl font-bold text-center text-white">Contact Me</h1>
+      <div class="mb-4">
+        <div class="h-1 mx-auto bg-pink-500 w-1/4 opacity-75 mx-0 my-0 rounded"></div>
+      </div>
+      <div class="container p-4 mb-6 w-full lg:w-1/2 shadow-lg rounded-lg bg-gray-200 mx-auto">
+        <form action="" class="p-5 lg:p-10 text-center">
+          <h4 class="text-2xl font-semibold">Ingin Menghubungi Saya?</h4>
+          <p class="mt-1 mb-4 text-gray-600">silahkan tinggalkan pesan anda</p>
+          <div class="w-full mb-4 mt-8">
+            <label for="" class="uppercase text-gray-600 text-xs font-bold">Nama lengkap</label>
+            <input type="text" name="" id="" class="mt-2 px-3 py-3 placeholder-gray-500 w-full text-gray-600 bg-white rounded text-sm shadow" placeholder="Nama lengkap" />
+          </div>
+
+          <div class="w-full mb-4 mt-8">
+            <label for="" class="uppercase text-gray-600 text-xs font-bold">Email</label>
+            <input type="text" name="" id="" class="mt-2 px-3 py-3 placeholder-gray-500 w-full text-gray-600 bg-white rounded text-sm shadow" placeholder="Email" />
+          </div>
+
+          <div class="w-full mb-4 mt-8">
+            <label for="" class="uppercase text-gray-600 text-xs font-bold">Pesan</label>
+            <textarea name="" id="" class="mt-2 px-3 py-6 placeholder-gray-500 w-full text-gray-600 bg-white rounded text-sm shadow" placeholder="tuliskan pesan anda"></textarea>
+          </div>
+
+          <div class="mt-6">
+            <button class="bg-indigo-700 text-white text-sm font-bold uppercase px-6 py-3 rounded shadow hover:bg-indigo-900 hover:shadow-lg" type="button">Kirim pesan</button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <section class="w-screen mx-auto py-4 bg-white mt-8 mb-8">
+      <div class="text-center">
+        <!-- link & icon -->
+        <a href="#" class="text-indigo-700 hover:text-indigo-900 p-2">
+          <i class="fa-2x fab fa-facebook"></i>
+        </a>
+        <a href="#" class="text-indigo-700 hover:text-indigo-900 p-2">
+          <i class="fa-2x fab fa-twitter"></i>
+        </a>
+        <a href="#" class="text-indigo-700 hover:text-indigo-900 p-2">
+          <i class="fa-2x fab fa-instagram"></i>
+        </a>
+      </div>
+    </section>
 
     <!-- utilitas dasar -->
     <!-- widh margin padding background-color  -->
